# esp-weather-report

./: .env.example  Cargo.toml  sdkconfig.defaults
.cargo/: config.toml
src/: .gitignore  edp_display.rs  http_client.rs  main.rs  model.rs  weather_api.rs  wifi_config.example.rs
