[package]
name = "eink-esp"
version = "0.1.0"
authors = ["Tom Cheung <cheungch7@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.48", default-features = false }
esp-idf-sys = { version = "0.34.0" }
# epd-waveshare = { git = "https://github.com/tomcheung/epd-waveshare", branch = "epd2in9b_v4"}
epd-waveshare = { path = "/home/tom/developer/epd-waveshare" }
anyhow = "1.0.83"
embedded-graphics = "0.8.1"
embedded-svc = "0.27.1"
serde_json = "1.0.117"
embedded-icon = { version = "0.0.1", features=["iconoir", "32px"] }
dht-embedded = "0.4.0"

[build-dependencies]
embuild = "0.31.3"
